# fastapi-problem

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  _typos.toml  index.html  mkdocs.yml  mutmut_config.py  pyproject.toml  setup.cfg  sitemap.xml  tasks.py
.github/: pull_request_template.md
.github/workflows/: publish.yml  publish_docs.yml  pythonapp.yml  style.yml  testlint.yml  tests.yml
docs/: error.md  handlers.md  hooks.md  index.md  usage.md
error/: index.html
examples/: auth.py  basic.py  builtin.py  custom.py  override.py
handlers/: index.html
hooks/: index.html
release_notes/: 1.feat  11.fix  13.feat  15.feat  16.feat!  19.fix  2.feat  2.fix  4.fix  5.feat  7.fix  9.feat  initial.fix
search/: search_index.json
src/fastapi_problem/: cors.py  error.py  handler.py  util.py
src/fastapi_problem/handler/: __init__.py  base.py  fastapi.py  starlette.py  util.py
tests/: test_error.py  test_handler.py  test_util.py
tests/handler/: test_aiohttp.py  test_base.py  test_fastapi.py  test_flask.py  test_pyramid.py  test_starlette.py  test_util.py
usage/: index.html
web_error/: __init__.py  constant.py  error.py
web_error/handler/: aiohttp.py  fastapi.py  flask.py  pyramid.py  starlette.py  util.py
