[tool.poetry]
name = "fastapi-problem"
version = "0.9.1"
description = "FastAPI support for RFC9457 problems."
authors = ["Daniel Edgecombe <edgy.edgemond@gmail.com>"]
license = "Apache-2.0"
repository="https://github.com/NRWLDev/fastapi-problem/"
homepage="https://github.com/NRWLDev/fastapi-problem/"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rfc9457 = ">=0.1.0"
starlette_problem = ">=0.10"

[tool.poetry.group.dev.dependencies]

fastapi = "*"

changelog-gen = "^0.11"
pytest = "~7.4.3"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1.0"
pytest-httpx = "^0.26.0"
pytest-random-order = "^1.0"

# Style
ruff = "^0.3.0"
pre-commit = "^3.0.2"

[tool.changelog_gen]
current_version = "0.9.1"
reject_empty = true
allowed_branches = [
    "main",
]
date_format = "- %Y-%m-%d"
issue_link = "https://github.com/NRWLDev/fastapi-problem/issues/::issue_ref::"
commit_link = "https://github.com/NRWLDev/fastapi-problem/commit/::commit_hash::"

[[tool.changelog_gen.files]]
filename = "pyproject.toml"
pattern = 'version = "{version}"'

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--random-order"
markers = [
    "backwards_compat: marks tests as part of backwards compatibility checks.",
]

[tool.coverage.report]
sort = "cover"
fail_under = 95
show_missing = true
skip_covered = true
exclude_lines = [
    "if t.TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
source = ["src/fastapi_problem"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002",  # ParamSpec not available in 3.9
    "ANN003",  # ParamSpec not available in 3.9
    "FIX",  # allow TODO
    "D",
]

[tool.ruff.lint.per-file-ignores]
"tasks.py" = ["ANN", "E501", "INP001", "S"]
"tests/*" = ["ANN", "D", "S101", "S105", "S106", "SLF001"]
"examples/*" = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["fastapi_problem"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
