[project]
name = "fastapi-problem"
version = "0.12.2"
description = "FastAPI support for RFC9457 problems."
authors = [
    {name = "Daniel Edgecombe", email = "daniel@nrwl.co"},
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["exception", "handler", "webdev", "starlette"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Utilities",
    "Framework :: FastAPI",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "rfc9457 >= 0.4.0",
    "starlette_problem >=0.13.3",
]

[project.urls]
homepage="https://github.com/NRWLDev/fastapi-problem/"
documentation="https://nrwldev.github.io/fastapi-problem/"

[project.optional-dependencies]
dev = [
    "fastapi",

    # test
    "pytest >= 9.0.2",
    "pytest-asyncio >= 1.3.0",
    "pytest-cov >= 7.0.0",
    "pytest-httpx >= 0.36.0",
    "pytest-random-order >= 1.2.0",

    # style
    "ruff >= 0.14.10",
    "pre-commit >= 3.7.1",
    "ty>=0.0.21",

    # release
    "git-cliff>=2.12.0",
    "bumpversion-slim>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--random-order"
markers = [
    "backwards_compat: marks tests as part of backwards compatibility checks.",
]

[tool.coverage.report]
sort = "cover"
fail_under = 95
show_missing = true
skip_covered = true
exclude_lines = [
    "if t.TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
source = ["src/fastapi_problem"]

[tool.ruff]
line-length = 120
target-version = "py38"
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002",  # ParamSpec not available in 3.9
    "ANN003",  # ParamSpec not available in 3.9
    "E501",    # Handled by ruff format
    "FIX",  # allow TODO
    "D",
]

[tool.ruff.lint.per-file-ignores]
"tasks.py" = ["ANN", "E501", "INP001", "S"]
"tests/*" = ["ANN", "D", "S101", "S105", "S106", "SLF001"]
"examples/*" = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["fastapi_problem"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.terminal]
output-format = "concise"

[tool.ty.src]
exclude = ["tests/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version = "0.12.2"
allow_dirty = true
allow_missing = true
commit_extra = ["CHANGELOG.md"]
allowed_branches = [
    "main",
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
pattern = 'version = "{version}"'

[tool.git-cliff.bump]
features_always_bump_minor = false
breaking_always_bump_major = false

[tool.git-cliff.changelog]
header = """
# Changelog\n
"""
body = """
{% if version %}\
    ## {{ version  }} - {{ timestamp | date(format="%Y-%m-%d") }}
{% else %}\
    ## Unreleased
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | upper_first }}
    {% for commit in commits %}
        - {% if commit.breaking %}**Breaking** {% endif %}\
        {{ commit.message | split(pat="\n") | first | upper_first | trim }}\
        {%- if commit.links %} {% for link in commit.links %}[{{link.text}}]({{link.href}}) {% endfor -%}{% endif %} \
        [[{{ commit.id | truncate(length=7, end="") }}](https://github.com/NRWLDev/fastapi-problem/commit/{{ commit.id }})]\
    {% endfor %}
{% endfor %}\n
"""
trim = true
footer = "<!-- generated by git-cliff -->"

[tool.git-cliff.git]
link_parsers = [
    { pattern = "#(\\d+)", href = "https://github.com/NRWLDev/fastapi-problem/issues/$1"},
]

commit_preprocessors = [
  # Remove issue numbers.
  { pattern = '\((\w+\s)?#([0-9]+)\)', replace = "" },
]
commit_parsers = [
    { message = "^feat", group = "Features and Improvements" },
    { message = "^fix", group = "Bug fixes" },
    { message = "^doc", group = "Documentation" },
    { message = "^refactor", group = "Refactor" },
    { message = "^style", group = "Styling" },
    { message = "^test", group = "Miscellaneous" },
    { message = "^chore|^ci", group = "Miscellaneous" },
    { message = "^chore\\(deps.*\\)", skip = true },
]
sort_commits = "newest"
